--- a/public/designer/view/Right.fragment.xml
+++ b/public/designer/view/Right.fragment.xml
@@ -1,5 +1,30 @@
-<core:FragmentDefinition 
-	xmlns:core="sap.ui.core" 
-    xmlns:m="sap.m" displayBlock="true">
-    <m:Button/>
+<core:FragmentDefinition
+    xmlns:core="sap.ui.core"
+    xmlns:f="sap.ui.layout.form"
+    xmlns:layout="sap.ui.layout"
+    xmlns="sap.m" displayBlock="true">
+    <f:Form width="100%" title="Properties" editable="true">
+        <f:layout>
+            <f:ResponsiveGridLayout columnsM="2" />
+        </f:layout>
+        <f:formContainers>
+            <f:FormContainer>
+                <f:FormElement label="Type">
+                    <Label text="Task"/>
+                </f:FormElement>
+                <f:FormElement label="Business Object Object Type">
+                    <Select showSecondaryValues= "true">
+                        <items>
+                            <core:ListItem text="Sales Orders" additionalText="RDR"/>
+                            <core:ListItem text="Invoices" additionalText="INV"/>
+                            <core:ListItem text="Business Partners" additionalText="CRD"/>
+                        </items>
+                    </Select>
+                </f:FormElement>
+                <f:FormElement label="Memo">
+                    <TextArea value="..." rows="8" />
+                </f:FormElement>
+            </f:FormContainer>
+        </f:formContainers>
+    </f:Form>
 </core:FragmentDefinition>
