--- a/public/designer/view/Left.fragment.xml
+++ b/public/designer/view/Left.fragment.xml
@@ -1,8 +1,25 @@
-<core:FragmentDefinition 
-	xmlns:core="sap.ui.core" 
+<core:FragmentDefinition
+    xmlns:core="sap.ui.core"
+    xmlns:f="sap.ui.layout.form"
+    xmlns:layout="sap.ui.layout"
     xmlns="sap.m" displayBlock="true">
-    <Button text="Cursor"/>
-    <Button text="Start"/>
-    <Button text="Task"/>
-    <Button text="End"/>
+    <f:Form title="Tools">
+        <f:layout>
+            <f:ResponsiveGridLayout/>
+        </f:layout>
+        <f:formContainers>
+            <f:FormContainer>
+                <f:layoutData>
+                    <layout:GridData span="XL12 L12 M12 S12" />
+                </f:layoutData>
+                <f:FormElement >
+                    <Button width="8rem" text="Select" icon="sap-icon://cursor-arrow" />
+                    <Button width="8rem" text="Start" icon="sap-icon://SAP-icons-TNT/start-event" />
+                    <Button width="8rem" text="Task" icon="sap-icon://SAP-icons-TNT/task" />
+                    <Button width="8rem" text="End" icon="sap-icon://SAP-icons-TNT/end-event" />
+                    <Button width="8rem" text="Gateway" icon="sap-icon://SAP-icons-TNT/gateway" />
+                </f:FormElement>
+            </f:FormContainer>
+        </f:formContainers>
+    </f:Form>
 </core:FragmentDefinition>
