--- a/public/designer/view/Left.fragment.xml
+++ b/public/designer/view/Left.fragment.xml
@@ -12,12 +12,15 @@
                 <f:layoutData>
                     <layout:GridData span="XL12 L12 M12 S12" />
                 </f:layoutData>
-                <f:FormElement >
+                <f:FormElement  label="Workflow">
                     <Button width="8rem" text="Select" press = ".onPressAddSelect" icon="sap-icon://cursor-arrow" />
                     <Button width="8rem" text="Start"  press = ".onPressAddStart" icon="sap-icon://SAP-icons-TNT/start-event" />
                     <Button width="8rem" text="Task"  press = ".onPressAddTask" icon="sap-icon://SAP-icons-TNT/task" />
                     <Button width="8rem" text="End"  press = ".onPressAddEnd" icon="sap-icon://SAP-icons-TNT/end-event" />
                     <Button width="8rem" text="Gateway"  press = ".onPressAddGateway" icon="sap-icon://SAP-icons-TNT/gateway" />
+                </f:FormElement>
+                <f:FormElement label="Size">
+                    <Slider value="0" enableTickmarks="false" class="sapUiSmallMarginBottom" min="-2" max="2" liveChange="onScale"/>
                 </f:FormElement>
             </f:FormContainer>
         </f:formContainers>
