--- a/public/designer/view/Center.fragment.xml
+++ b/public/designer/view/Center.fragment.xml
@@ -2,5 +2,5 @@
 	xmlns:core="sap.ui.core" 
     xmlns="sap.m"
     xmlns:wf="b1.designer.control" displayBlock="true">
-    <wf:WorkflowDesigner id="idWorkflow" selectItem=".onWfSelectItem"/>
+    <wf:WorkflowDesigner id="idWorkflow" selectItem=".onWfSelectItem" width="100%" height="100%"/>
 </core:FragmentDefinition>
